# tree-sitter-edf

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-edf.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_edf/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterEdf/: edf.h
claude/: settings.local.json
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: backticks.txt  comments.txt  edge_cases.txt  export.txt  interpolation.txt  keys.txt  multiline.txt  quoted.txt  unquoted_values.txt
