[package]
name = "tree-sitter-edf"
version = "0.1.0"
description = "Tree-sitter grammar for EDF (Ecolog Dotenv File Format)"
authors = ["Ecolog Team"]
license = "MIT"
readme = "README.md"
keywords = ["tree-sitter", "parser", "dotenv", "env", "edf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ph1losof/tree-sitter-edf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.24"

[build-dependencies]
cc = "1.0"
